--- a/scss/_small-default.scss
+++ b/scss/_small-default.scss
@@ -9,7 +9,7 @@ body {
     font-family: $defaultFont;
     font-weight: $normalWeight;
     font-size: 16px;
-    // min-width: 475px;
+    min-width: 475px;
     // width: 100vw;
 }
 
